tests/fixtures/rules/require-dot-notation/bad/dot-notation.js
let a = b['c'];
let a = b['_camelCased'];
let a = b['camelCased_'];
let a = b['snake_cased'];
let a = b['camelCased_butWithSnakes'];
